--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,6 +31,12 @@ select {
     border-radius: 3px;
 }
 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .form-row {
     display: flex;
     justify-content: space-between;
